# audio-transcription

./: .gitignore  README.md
audio-streamer/: .env.local  pyproject.toml  streamer.py
audio-transcription-server/: pyproject.toml  server.py
ui/: .env.local  package-lock.json  package.json
ui/src/: App.module.css  App.tsx  MessageList.module.css  MessageList.tsx
