[tool.poetry]
name = "audio-transcription-server"
version = "0.1.0"
description = ""
authors = ["oshou <adf1985adf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
asyncio = "^3.4.3"
openai = "0.28.1"
pydub = "^0.25.1"
whisperstream = {git = "https://github.com/gkorepanov/whisper-stream.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
