[tool.poetry]
name = "audio-transcription-server"
version = "0.1.0"
description = ""
authors = ["oshou <adf1985adf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
asyncio = "^3.4.3"
pydub = "^0.25.1"
whisperstream = {git = "https://github.com/gkorepanov/whisper-stream.git"}
openai = "^1.14.2"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
